--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -33,7 +33,7 @@
     </MenuBar>
       <TabPane fx:id="tab_pane" layoutY="21.0" prefHeight="424.0" prefWidth="628.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab closable="false" text="All Users">
+          <Tab closable="false" text="Chat">
             <content>
               <AnchorPane prefHeight="438.0" prefWidth="630.0">
                      <children>
@@ -73,6 +73,38 @@
                   </AnchorPane>
             </content>
           </Tab>
+            <Tab text="Registration">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Pane prefHeight="397.0" prefWidth="628.0">
+                           <children>
+                              <TextField layoutX="27.0" layoutY="24.0" />
+                              <TextField layoutX="27.0" layoutY="64.0" />
+                              <ComboBox layoutX="26.0" layoutY="220.0" prefWidth="150.0" promptText="Choose College" />
+                              <Label layoutX="195.0" layoutY="28.0" text="Login" />
+                              <Label layoutX="194.0" layoutY="68.0" text="Name" />
+                              <Label layoutX="194.0" layoutY="108.0" text="Password" />
+                              <Label layoutX="194.0" layoutY="145.0" text="Confirm Password" />
+                              <Label layoutX="195.0" layoutY="184.0" text="Sex" />
+                              <ComboBox layoutX="27.0" layoutY="180.0" prefWidth="150.0" promptText="Choose Gender" />
+                              <PasswordField layoutX="27.0" layoutY="104.0" />
+                              <PasswordField layoutX="27.0" layoutY="141.0" />
+                              <Label layoutX="194.0" layoutY="224.0" text="College" />
+                              <TextField disable="true" layoutX="27.0" layoutY="371.0" />
+                              <Label disable="true" layoutX="195.0" layoutY="375.0" text="Other College" />
+                              <ComboBox disable="true" layoutX="26.0" layoutY="258.0" prefWidth="150.0" promptText="Choose Course" />
+                              <Label disable="true" layoutX="195.0" layoutY="262.0" text="Course" />
+                              <TextField disable="true" layoutX="27.0" layoutY="330.0" />
+                              <Label disable="true" layoutX="193.0" layoutY="334.0" text="Infnet email ID" />
+                              <Label disable="true" layoutX="193.0" layoutY="299.0" text="Course Start Trimester" />
+                              <ComboBox disable="true" layoutX="26.0" layoutY="295.0" prefWidth="150.0" promptText="Choose Course" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
         </tabs>
          <effect>
             <Reflection />
@@ -80,7 +112,7 @@
       </TabPane>
       <Pane layoutX="23.0" layoutY="470.0" prefHeight="77.0" prefWidth="596.0">
          <children>
-        <Button fx:id="btn_sv_opt" layoutX="120.0" mnemonicParsing="false" text="Server Options" />
+        <Button fx:id="btn_sv_opt" layoutX="120.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Register" />
             <ProgressBar fx:id="progress" layoutX="322.0" layoutY="6.0" prefHeight="18.0" prefWidth="203.0" progress="0.0" />
         <Button fx:id="btn_disconnect" layoutX="225.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleDisconnectButton" text="Disconnect" />
         <Button fx:id="btn_exit" layoutX="548.0" layoutY="2.0" mnemonicParsing="false" text="Exit" />
