--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="548.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.fx.controllers.FXController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="629.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.fx.controllers.FXController">
   <children>
     <MenuBar layoutY="-4.0" prefHeight="24.0" prefWidth="628.0">
       <menus>
@@ -57,11 +57,11 @@
                             <Label layoutX="2.0" text="Chat log" />
                               <Label layoutX="428.0" layoutY="263.0" text="password" />
                             <Label layoutX="444.0" text="Online Users" />
-                              <TextField fx:id="fld_username" layoutX="488.0" layoutY="224.0" prefHeight="25.0" prefWidth="94.0" />
                               <TextField fx:id="sv_address" layoutX="488.0" layoutY="295.0" prefHeight="25.0" prefWidth="94.0" />
                               <TextField fx:id="sv_port" layoutX="488.0" layoutY="329.0" prefHeight="25.0" prefWidth="51.0" />
                               <PasswordField fx:id="passwd_field" layoutX="488.0" layoutY="259.0" prefHeight="25.0" prefWidth="94.0" />
                               <Label fx:id="lbl_time" layoutX="61.0" prefHeight="17.0" prefWidth="53.0" />
+                              <ComboBox fx:id="combo_login" layoutX="488.0" layoutY="224.0" prefHeight="25.0" prefWidth="94.0" />
                            </children>
                         </Pane>
                         <ProgressIndicator fx:id="indicator" layoutX="587.0" layoutY="3.0" prefHeight="25.0" prefWidth="43.0" progress="0.0" visible="false">
@@ -75,50 +75,50 @@
           </Tab>
             <Tab fx:id="tab_reg" text="Registration">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="395.0" prefWidth="628.0">
                      <children>
-                        <Pane prefHeight="397.0" prefWidth="628.0">
+                        <Pane prefHeight="424.0" prefWidth="628.0">
                            <children>
-                              <TextField fx:id="fld_login_reg" layoutX="27.0" layoutY="24.0" />
-                              <TextField fx:id="fld_name_reg" layoutX="27.0" layoutY="64.0" />
-                              <ComboBox fx:id="combo_college_reg" layoutX="26.0" layoutY="220.0" prefWidth="150.0" promptText="Choose College" />
-                              <Label layoutX="194.0" layoutY="28.0" text="*Login" />
-                              <Label layoutX="195.0" layoutY="68.0" text="*Name (Screen name)" />
-                              <Label layoutX="194.0" layoutY="108.0" text="*Password" />
-                              <Label layoutX="190.0" layoutY="145.0" text="*Confirm Password" />
-                              <Label layoutX="191.0" layoutY="184.0" text="*Sex" />
-                              <ComboBox fx:id="combo_sex_reg" layoutX="27.0" layoutY="180.0" prefWidth="150.0" promptText="Choose Gender" />
-                              <PasswordField fx:id="fld_password_reg" layoutX="27.0" layoutY="104.0" />
-                              <PasswordField fx:id="fld_password2_reg" layoutX="27.0" layoutY="141.0" />
-                              <Label layoutX="189.0" layoutY="224.0" text="*College" />
-                              <TextField fx:id="fld_othercol_reg" disable="true" layoutX="27.0" layoutY="263.0" />
-                              <Label fx:id="lbl_addcol_reg" layoutX="191.0" layoutY="267.0" text="Other College" />
-                              <ComboBox fx:id="combo_course_reg" disable="true" layoutX="26.0" layoutY="302.0" prefWidth="150.0" promptText="Choose Course" />
-                              <Label layoutX="191.0" layoutY="306.0" text="*Course" />
-                              <TextField fx:id="fld_infnetmail_reg" disable="true" layoutX="451.0" layoutY="24.0" />
-                              <Label fx:id="lbl_infnetid_reg" layoutX="358.0" layoutY="28.0" text="Infnet email ID" />
-                              <Label fx:id="lbl_coursestart_reg" layoutX="190.0" layoutY="377.0" text="Course Start Trimester" />
-                              <ComboBox fx:id="combo_courseStTr_reg" disable="true" layoutX="26.0" layoutY="373.0" prefWidth="150.0" promptText="Choose Course" />
-                              <TextField fx:id="fld_email_reg" layoutX="452.0" layoutY="67.0" />
-                              <Label layoutX="406.0" layoutY="71.0" text="*Email" />
-                              <Label layoutX="373.0" layoutY="111.0" text="WhatsApp #" />
-                              <TextField fx:id="fld_whatsapp_reg" layoutX="452.0" layoutY="107.0" />
-                              <TextField fx:id="fld_facebook_reg" layoutX="452.0" layoutY="147.0" />
-                              <Label layoutX="325.0" layoutY="151.0" text="Facebook Link Profile" />
-                              <ComboBox fx:id="combo_state_reg" layoutX="453.0" layoutY="263.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
-                              <ComboBox fx:id="combo_city_reg" layoutX="453.0" layoutY="338.0" prefHeight="25.0" prefWidth="148.0" promptText="Choose City" />
-                              <Label layoutX="413.0" layoutY="267.0" text="*State" />
-                              <Label layoutX="416.0" layoutY="342.0" text="*City" />
-                              <Label fx:id="lbl_addstate_reg" layoutX="317.0" layoutY="305.0" text="Add new state/province" />
-                              <TextField fx:id="fld_new_state_reg" disable="true" layoutX="451.0" layoutY="301.0" />
-                              <Label fx:id="lbl_addcity_reg" layoutX="373.0" layoutY="377.0" text="Add new City" />
-                              <TextField fx:id="fld_new_city_reg" disable="true" layoutX="451.0" layoutY="373.0" />
-                              <TextField fx:id="fld_new_country_reg" disable="true" layoutX="452.0" layoutY="224.0" />
-                              <Label fx:id="lbl_addcountry_reg" layoutX="304.0" layoutY="228.0" text="Add new country/republic" />
-                              <Label layoutX="397.0" layoutY="188.0" text="*Country" />
-                              <ComboBox fx:id="combo_country_reg" layoutX="451.0" layoutY="184.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose Country" />
-                              <Label fx:id="lbl_addcourse_reg" layoutX="190.0" layoutY="342.0" text="Add new course" />
-                              <TextField fx:id="fld_addcourse_reg" disable="true" layoutX="26.0" layoutY="338.0" />
+                              <TextField fx:id="fld_login_reg" layoutX="27.0" layoutY="14.0" />
+                              <TextField fx:id="fld_name_reg" layoutX="27.0" layoutY="54.0" />
+                              <ComboBox fx:id="combo_college_reg" layoutX="26.0" layoutY="210.0" prefWidth="150.0" promptText="Choose College" />
+                              <Label layoutX="197.0" layoutY="16.0" text="*Login" />
+                              <Label layoutX="198.0" layoutY="56.0" text="*Name (Screen name)" />
+                              <Label layoutX="197.0" layoutY="96.0" text="*Password" />
+                              <Label layoutX="193.0" layoutY="133.0" text="*Confirm Password" />
+                              <Label layoutX="194.0" layoutY="172.0" text="*Sex" />
+                              <ComboBox fx:id="combo_sex_reg" layoutX="27.0" layoutY="170.0" prefWidth="150.0" promptText="Choose Gender" />
+                              <PasswordField fx:id="fld_password_reg" layoutX="27.0" layoutY="94.0" />
+                              <PasswordField fx:id="fld_password2_reg" layoutX="27.0" layoutY="131.0" />
+                              <Label layoutX="192.0" layoutY="212.0" text="*College" />
+                              <TextField fx:id="fld_othercol_reg" disable="true" layoutX="27.0" layoutY="253.0" />
+                              <Label fx:id="lbl_addcol_reg" layoutX="194.0" layoutY="255.0" text="Other College" />
+                              <ComboBox fx:id="combo_course_reg" disable="true" layoutX="26.0" layoutY="292.0" prefWidth="150.0" promptText="Choose Course" />
+                              <Label layoutX="194.0" layoutY="294.0" text="*Course" />
+                              <TextField fx:id="fld_infnetmail_reg" disable="true" layoutX="451.0" layoutY="14.0" />
+                              <Label fx:id="lbl_infnetid_reg" layoutX="355.0" layoutY="18.0" text="Infnet email ID" />
+                              <Label fx:id="lbl_coursestart_reg" layoutX="193.0" layoutY="365.0" text="Course Start Trimester" />
+                              <ComboBox fx:id="combo_courseStTr_reg" disable="true" layoutX="26.0" layoutY="363.0" prefWidth="150.0" promptText="Choose Course" />
+                              <TextField fx:id="fld_email_reg" layoutX="452.0" layoutY="57.0" />
+                              <Label layoutX="403.0" layoutY="61.0" text="*Email" />
+                              <Label layoutX="370.0" layoutY="101.0" text="WhatsApp #" />
+                              <TextField fx:id="fld_whatsapp_reg" layoutX="452.0" layoutY="97.0" />
+                              <TextField fx:id="fld_facebook_reg" layoutX="452.0" layoutY="137.0" />
+                              <Label layoutX="322.0" layoutY="141.0" text="Facebook Link Profile" />
+                              <ComboBox fx:id="combo_state_reg" layoutX="453.0" layoutY="253.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
+                              <ComboBox fx:id="combo_city_reg" layoutX="453.0" layoutY="328.0" prefHeight="25.0" prefWidth="148.0" promptText="Choose City" />
+                              <Label layoutX="410.0" layoutY="257.0" text="*State" />
+                              <Label layoutX="413.0" layoutY="332.0" text="*City" />
+                              <Label fx:id="lbl_addstate_reg" layoutX="314.0" layoutY="295.0" text="Add new state/province" />
+                              <TextField fx:id="fld_new_state_reg" disable="true" layoutX="451.0" layoutY="291.0" />
+                              <Label fx:id="lbl_addcity_reg" layoutX="370.0" layoutY="367.0" text="Add new City" />
+                              <TextField fx:id="fld_new_city_reg" disable="true" layoutX="451.0" layoutY="363.0" />
+                              <TextField fx:id="fld_new_country_reg" disable="true" layoutX="452.0" layoutY="214.0" />
+                              <Label fx:id="lbl_addcountry_reg" layoutX="301.0" layoutY="218.0" text="Add new country/republic" />
+                              <Label layoutX="394.0" layoutY="178.0" text="*Country" />
+                              <ComboBox fx:id="combo_country_reg" layoutX="451.0" layoutY="174.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose Country" />
+                              <Label fx:id="lbl_addcourse_reg" layoutX="193.0" layoutY="330.0" text="Add new course" />
+                              <TextField fx:id="fld_addcourse_reg" disable="true" layoutX="26.0" layoutY="328.0" />
                            </children>
                         </Pane>
                      </children>
@@ -130,9 +130,9 @@
             <Reflection />
          </effect>
       </TabPane>
-      <Pane layoutX="23.0" layoutY="470.0" prefHeight="77.0" prefWidth="596.0">
+      <Pane layoutX="23.0" layoutY="486.0" prefHeight="68.0" prefWidth="596.0">
          <children>
-        <Button fx:id="btn_sv_opt" layoutX="120.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Register" />
+        <Button fx:id="btn_sv_opt" layoutX="120.0" mnemonicParsing="false" onAction="#handleRegisterButton" prefHeight="25.0" prefWidth="94.0" text="Register" />
             <ProgressBar fx:id="progress" layoutX="322.0" layoutY="6.0" prefHeight="18.0" prefWidth="203.0" progress="0.0" />
         <Button fx:id="btn_disconnect" layoutX="225.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleDisconnectButton" text="Disconnect" />
         <Button fx:id="btn_exit" layoutX="548.0" layoutY="2.0" mnemonicParsing="false" text="Exit" />
