--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.effect.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.*?>
@@ -61,14 +60,9 @@
                               <TextField fx:id="sv_port" layoutX="488.0" layoutY="329.0" prefHeight="25.0" prefWidth="51.0" />
                               <PasswordField fx:id="passwd_field" layoutX="488.0" layoutY="259.0" prefHeight="25.0" prefWidth="94.0" />
                               <Label fx:id="lbl_time" layoutX="61.0" prefHeight="17.0" prefWidth="53.0" />
-                              <ComboBox fx:id="combo_login" layoutX="488.0" layoutY="224.0" prefHeight="25.0" prefWidth="94.0" />
+                              <ComboBox fx:id="combo_login" layoutX="488.0" layoutY="224.0" onMouseClicked="#handleLoginComboClick" prefHeight="25.0" prefWidth="94.0" />
                            </children>
                         </Pane>
-                        <ProgressIndicator fx:id="indicator" layoutX="587.0" layoutY="3.0" prefHeight="25.0" prefWidth="43.0" progress="0.0" visible="false">
-                           <effect>
-                              <Reflection />
-                           </effect>
-                        </ProgressIndicator>
                      </children>
                   </AnchorPane>
             </content>
@@ -81,9 +75,9 @@
                            <children>
                               <TextField fx:id="fld_login_reg" layoutX="27.0" layoutY="14.0" />
                               <TextField fx:id="fld_name_reg" layoutX="27.0" layoutY="54.0" />
-                              <ComboBox fx:id="combo_college_reg" layoutX="26.0" layoutY="210.0" prefWidth="150.0" promptText="Choose College" />
-                              <Label layoutX="197.0" layoutY="16.0" text="*Login" />
-                              <Label layoutX="198.0" layoutY="56.0" text="*Name (Screen name)" />
+                              <ComboBox fx:id="combo_college_reg" layoutX="26.0" layoutY="210.0" onAction="#handleDetectSelection" onMouseClicked="#handleCollegeRegComboClick" prefWidth="150.0" promptText="Choose College" />
+                              <Label layoutX="197.0" layoutY="18.0" text="*Login" />
+                              <Label layoutX="194.0" layoutY="58.0" text="*Name (Screen name)" />
                               <Label layoutX="197.0" layoutY="96.0" text="*Password" />
                               <Label layoutX="193.0" layoutY="133.0" text="*Confirm Password" />
                               <Label layoutX="194.0" layoutY="172.0" text="*Sex" />
@@ -91,34 +85,26 @@
                               <PasswordField fx:id="fld_password_reg" layoutX="27.0" layoutY="94.0" />
                               <PasswordField fx:id="fld_password2_reg" layoutX="27.0" layoutY="131.0" />
                               <Label layoutX="192.0" layoutY="212.0" text="*College" />
-                              <TextField fx:id="fld_othercol_reg" disable="true" layoutX="27.0" layoutY="253.0" />
-                              <Label fx:id="lbl_addcol_reg" layoutX="194.0" layoutY="255.0" text="Other College" />
-                              <ComboBox fx:id="combo_course_reg" disable="true" layoutX="26.0" layoutY="292.0" prefWidth="150.0" promptText="Choose Course" />
-                              <Label layoutX="194.0" layoutY="294.0" text="*Course" />
-                              <TextField fx:id="fld_infnetmail_reg" disable="true" layoutX="451.0" layoutY="14.0" />
-                              <Label fx:id="lbl_infnetid_reg" layoutX="355.0" layoutY="18.0" text="Infnet email ID" />
-                              <Label fx:id="lbl_coursestart_reg" layoutX="193.0" layoutY="365.0" text="Course Start Trimester" />
-                              <ComboBox fx:id="combo_courseStTr_reg" disable="true" layoutX="26.0" layoutY="363.0" prefWidth="150.0" promptText="Choose Course" />
-                              <TextField fx:id="fld_email_reg" layoutX="452.0" layoutY="57.0" />
-                              <Label layoutX="403.0" layoutY="61.0" text="*Email" />
-                              <Label layoutX="370.0" layoutY="101.0" text="WhatsApp #" />
-                              <TextField fx:id="fld_whatsapp_reg" layoutX="452.0" layoutY="97.0" />
-                              <TextField fx:id="fld_facebook_reg" layoutX="452.0" layoutY="137.0" />
-                              <Label layoutX="322.0" layoutY="141.0" text="Facebook Link Profile" />
-                              <ComboBox fx:id="combo_state_reg" layoutX="453.0" layoutY="253.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
-                              <ComboBox fx:id="combo_city_reg" layoutX="453.0" layoutY="328.0" prefHeight="25.0" prefWidth="148.0" promptText="Choose City" />
-                              <Label layoutX="410.0" layoutY="257.0" text="*State" />
-                              <Label layoutX="413.0" layoutY="332.0" text="*City" />
-                              <Label fx:id="lbl_addstate_reg" layoutX="314.0" layoutY="295.0" text="Add new state/province" />
-                              <TextField fx:id="fld_new_state_reg" disable="true" layoutX="451.0" layoutY="291.0" />
-                              <Label fx:id="lbl_addcity_reg" layoutX="370.0" layoutY="367.0" text="Add new City" />
-                              <TextField fx:id="fld_new_city_reg" disable="true" layoutX="451.0" layoutY="363.0" />
-                              <TextField fx:id="fld_new_country_reg" disable="true" layoutX="452.0" layoutY="214.0" />
-                              <Label fx:id="lbl_addcountry_reg" layoutX="301.0" layoutY="218.0" text="Add new country/republic" />
-                              <Label layoutX="394.0" layoutY="178.0" text="*Country" />
-                              <ComboBox fx:id="combo_country_reg" layoutX="451.0" layoutY="174.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose Country" />
-                              <Label fx:id="lbl_addcourse_reg" layoutX="193.0" layoutY="330.0" text="Add new course" />
-                              <TextField fx:id="fld_addcourse_reg" disable="true" layoutX="26.0" layoutY="328.0" />
+                              <TextField fx:id="fld_othercol_reg" disable="true" layoutX="27.0" layoutY="374.0" />
+                              <Label fx:id="lbl_addcol_reg" layoutX="194.0" layoutY="378.0" text="Other College" />
+                              <ComboBox fx:id="combo_course_reg" disable="true" layoutX="28.0" layoutY="289.0" onMouseClicked="#handleCourseRegComboClick" prefHeight="25.0" prefWidth="148.0" promptText="Choose Course" />
+                              <Label layoutX="194.0" layoutY="291.0" text="*Course" />
+                              <TextField fx:id="fld_infnetmail_reg" disable="true" layoutX="28.0" layoutY="250.0" />
+                              <Label fx:id="lbl_infnetid_reg" layoutX="192.0" layoutY="254.0" text="Infnet email ID" />
+                              <Label fx:id="lbl_coursestart_reg" layoutX="193.0" layoutY="336.0" text="Course Start Trimester" />
+                              <ComboBox fx:id="combo_courseStTr_reg" layoutX="27.0" layoutY="334.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Trimester" />
+                              <TextField fx:id="fld_email_reg" layoutX="444.0" layoutY="14.0" />
+                              <Label layoutX="395.0" layoutY="18.0" text="*Email" />
+                              <Label layoutX="362.0" layoutY="58.0" text="WhatsApp #" />
+                              <TextField fx:id="fld_whatsapp_reg" layoutX="444.0" layoutY="54.0" />
+                              <TextField fx:id="fld_facebook_reg" layoutX="444.0" layoutY="94.0" />
+                              <Label layoutX="314.0" layoutY="98.0" text="Facebook Link Profile" />
+                              <ComboBox fx:id="combo_state_reg" layoutX="443.0" layoutY="170.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
+                              <ComboBox fx:id="combo_city_reg" layoutX="443.0" layoutY="208.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose City" />
+                              <Label layoutX="400.0" layoutY="174.0" text="*State" />
+                              <Label layoutX="403.0" layoutY="212.0" text="*City" />
+                              <Label layoutX="386.0" layoutY="135.0" text="*Country" />
+                              <ComboBox fx:id="combo_country_reg" layoutX="443.0" layoutY="131.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose Country" />
                            </children>
                         </Pane>
                      </children>
@@ -126,9 +112,6 @@
               </content>
             </Tab>
         </tabs>
-         <effect>
-            <Reflection />
-         </effect>
       </TabPane>
       <Pane layoutX="23.0" layoutY="486.0" prefHeight="68.0" prefWidth="596.0">
          <children>
