--- a/src/fxgui.fxml
+++ b/src/fxgui.fxml
@@ -44,7 +44,7 @@
                               <Label layoutX="430.0" layoutY="299.0" text="server IP" />
                             <ScrollPane layoutY="27.0" prefHeight="299.0" prefWidth="401.0">
                                  <content>
-                                    <TextArea fx:id="txt_chatlog" editable="false" prefHeight="297.0" prefWidth="399.0" />
+                                    <TextArea fx:id="txt_chatlog" editable="false" prefHeight="297.0" prefWidth="399.0" wrapText="true" />
                                  </content>
                             </ScrollPane>
                               <Label layoutX="423.0" layoutY="333.0" text="server Port" />
@@ -64,6 +64,7 @@
                               <PasswordField fx:id="passwd_field" layoutX="488.0" layoutY="259.0" prefHeight="25.0" prefWidth="94.0" />
                               <Label fx:id="lbl_time" layoutX="352.0" prefHeight="17.0" prefWidth="53.0" />
                               <ComboBox fx:id="combo_login" layoutX="488.0" layoutY="224.0" onMouseClicked="#handleLoginComboClick" prefHeight="25.0" prefWidth="94.0" visibleRowCount="20" />
+                              <Label layoutX="527.0" layoutY="371.0" text="version 17" />
                            </children>
                         </Pane>
                      </children>
@@ -98,10 +99,10 @@
                               <ComboBox fx:id="combo_courseStTr_reg" layoutX="27.0" layoutY="334.0" prefHeight="25.0" prefWidth="149.0" promptText="Choose Trimester" />
                               <TextField fx:id="fld_email_reg" layoutX="444.0" layoutY="14.0" />
                               <Label layoutX="395.0" layoutY="18.0" text="*Email" />
-                              <Label layoutX="362.0" layoutY="58.0" text="WhatsApp #" />
+                              <Label layoutX="382.0" layoutY="58.0" text="WhatsApp" />
                               <TextField fx:id="fld_whatsapp_reg" layoutX="444.0" layoutY="54.0" />
                               <TextField fx:id="fld_facebook_reg" layoutX="444.0" layoutY="94.0" />
-                              <Label layoutX="314.0" layoutY="98.0" text="Facebook Link Profile" />
+                              <Label layoutX="395.0" layoutY="98.0" text="fb.com/" />
                               <ComboBox fx:id="combo_state_reg" layoutX="443.0" layoutY="170.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose State" />
                               <ComboBox fx:id="combo_city_reg" layoutX="443.0" layoutY="208.0" prefHeight="25.0" prefWidth="150.0" promptText="Choose City" />
                               <Label layoutX="400.0" layoutY="174.0" text="*State" />
@@ -139,7 +140,7 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Pane layoutX="23.0" layoutY="486.0" prefHeight="68.0" prefWidth="596.0">
+      <Pane layoutX="17.0" layoutY="482.0" prefHeight="76.0" prefWidth="596.0">
          <children>
             <ProgressBar fx:id="progress" layoutX="206.0" layoutY="6.0" prefHeight="18.0" prefWidth="325.0" progress="0.0" />
         <Button fx:id="btn_disconnect" layoutX="120.0" mnemonicParsing="false" onAction="#handleDisconnectButton" text="Disconnect" />
@@ -148,7 +149,8 @@
             <Button fx:id="btn_send" layoutY="1.0" mnemonicParsing="false" onAction="#handleSendButton" text="Send" />
             <Label fx:id="lbl_status" layoutX="480.0" layoutY="6.0" prefHeight="17.0" prefWidth="53.0" />
             <TextField fx:id="fld_status" editable="false" layoutX="2.0" layoutY="37.0" prefHeight="25.0" prefWidth="463.0" />
-            <CheckBox fx:id="chkbox_autocon" layoutX="480.0" layoutY="41.0" mnemonicParsing="false" text="Auto Reconnect" />
+            <CheckBox fx:id="chkbox_autocon" layoutX="480.0" layoutY="30.0" mnemonicParsing="false" text="Auto Reconnect" />
+            <CheckBox fx:id="chkbox_mute" layoutX="480.0" layoutY="54.0" mnemonicParsing="false" text="Mute" />
          </children>
       </Pane>
       <Separator layoutX="14.0" layoutY="455.0" prefHeight="10.0" prefWidth="596.0" />
